# autonomous_server

./: CMakeLists.txt  package.xml
config/: rviz_config.rviz  sensors.json
launch/: carla.launch
src/: coordinate_translation.py  gnss_vs_pose.py  lidar_data_testing.py  lidar_object_avoidance.py  lidar_test.cpp  vehicle_control.py
