<?xml version="1.0"?>
<package format="2">
  <name>autonomous_server</name>
  <version>0.1.0</version>
  <description>
    ROS Server package intended to be used for the backbone of any 
    autonomous vehicle, though its current application is with the 
    opensource CARLA simulator at http://carla.org/ 
  </description>

 
  <maintainer email="emilybarbour@todo.todo">emilybarbour</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>libpcl-all</exec_depend> 


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
